tests/functional/lang/parse-fail-unexpected-ind-string.err
error: syntax error, unexpected start of an indented string, expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.''
             |   ^
            2|
